tests/ui/fail/fn-self-receiver-01.rs
fn main() {}

#[union_fn::union_fn]
trait Foo {
    fn foo(&self) {}
}
