tests/ui/fail/fn-self-receiver-01.stderr
error: must not have self receiver argument
 --> tests/ui/fail/fn-self-receiver-01.rs:5:12
  |
5 |     fn foo(&self) {}
  |            ^^^^^
